# BuksanSpyNVR

./: README.md
services/VideoCaptureService/BuksanVideoCap/: .gitignore  CMakeLists.txt  CMakeLists_api.txt  USAGE.md  config.yaml
services/VideoCaptureService/BuksanVideoCap/api/: HttpServer.cpp  HttpServer.h
services/VideoCaptureService/BuksanVideoCap/core/: CameraManager.cpp  CameraManager.h
services/VideoCaptureService/BuksanVideoCap/db/: IConnectionPool.cpp  IConnectionPool.h  PostgresConnectionPool.cpp  PostgresConnectionPool.h  schema.sql
services/VideoCaptureService/BuksanVideoCap/models/: Camera.h  Node.h  Recording.h
services/VideoCaptureService/BuksanVideoCap/repositories/interfaces/: ICameraRepository.h  IMetadataSyncQueue.h  INodeRepository.h  IRecordingRepository.h
services/VideoCaptureService/BuksanVideoCap/repositories/postgres/: PostgresCameraRepository.cpp  PostgresCameraRepository.h  PostgresNodeRepository.cpp  PostgresNodeRepository.h  PostgresRecordingRepository.cpp  PostgresRecordingRepository.h
services/VideoCaptureService/BuksanVideoCap/services/: CameraService.cpp  CameraService.h  MetadataSyncWorker.cpp  MetadataSyncWorker.h  NodeService.cpp  NodeService.h  RecordingService.cpp  RecordingService.h
services/VideoCaptureService/BuksanVideoCap/src/: Analytics.cpp  Analytics.h  CameraManager.cpp  CameraManager.h  CameraSession.cpp  CameraSession.h  ConfigLoader.cpp  ConfigLoader.h  Recorder.cpp  Recorder.h  StorageManager.cpp  StorageManager.h  main.cpp
services/VideoCaptureService/BuksanVideoCap/utils/: InMemoryMetadataSyncQueue.cpp  InMemoryMetadataSyncQueue.h
